# letterbox

./: .gitignore  Cargo.toml
benches/: astar_bench.rs
src/: actors.rs  game.rs  lib.rs  main.rs  plugin.rs
src/actors/: grid.rs  player.rs  robot.rs
src/game/: astar.rs  coordinates.rs  debug_image.rs  encoded_matrix.rs  matrix.rs  movement.rs  node.rs  path_node.rs
src/plugin/: assets.rs  enemy.rs  grid.rs  player.rs  power_up.rs  projectile.rs  robot.rs
