[package]
name = "letterbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.4.0"
flate2 = "1.0.24"
raster = "0.0.7"
tokio = { version = "1.21.2", features = ["full"] }

[[bench]]
name = "astar_bench"
harness = false