[package]
name = "letterbox"
version = "0.1.0"
edition = "2021"

#[lib]
#name = "letterbox"
#crate-type = ["staticlib", "cdylib"]

[dependencies]
bevy = "0.8.1"
criterion = "0.4.0"
flate2 = "1.0.24"
lazy_static = "1.4.0"
once_cell = "1.15.0"
raster = "0.0.7"
tokio = { version = "1.21.2", features = ["full"] }

[[bench]]
name = "astar_bench"
harness = false
