[package]
name = "letterbox"
version = "0.1.0"
edition = "2021"

#[lib]
#name = "letterbox"
#crate-type = ["staticlib", "cdylib"]

[dependencies]
bevy = "0.9.0"
criterion = "0.4.0"
flate2 = "1.0.24"
mapgen = "0.5.2"
rand = "0.8.5"
raster = "0.0.7"

[[bench]]
name = "astar_bench"
harness = false

[profile.dev.package."*"]
opt-level = 3
